--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.mvc.view.prefix=/WEB-INF/
 
 #conexion a mysql
-spring.datasource.url				= jdbc:mysql://localhost:3306/prueba1
-spring.datasource.username			= root
-spring.datasource.password			= 123456
-spring.datasource.driver-class-name	= com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto		= update
-spring.jpa.generate-ddl				= true
-spring.jpa.show-sql					= true
+spring.jpa.show-sql						= true
+spring.datasource.url					= jdbc:mysql://localhost:3306/prueba1
+spring.jpa.generate-ddl					= true
+spring.datasource.username				= root
+spring.datasource.password				= 123456
+spring.jpa.hibernate.ddl-auto			= update
+spring.datasource.driver-class-name		= com.mysql.cj.jdbc.Driver
+spring.mvc.hiddenmethod.filter.enabled	=true
